[package]
name = "bevy_audio_stream"
version = "0.2.0-dev"
authors = ["BD103"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.78.0" # Based on Bevy's requirements.
description = "Voice chat plugin for Bevy"
repository = "https://github.com/BD103/bevy_audio_stream"
categories = ["game-development", "multimedia::audio"]
keywords = ["bevy", "audio"]

[dependencies]
# Bevy
bevy = "0.14.0-rc.2"
