[package]
name = "bevy_audio_stream"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Programmatically stream audio in Bevy"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Bevy
bevy_app.workspace = true
bevy_asset.workspace = true
bevy_audio.workspace = true
bevy_reflect.workspace = true

crossbeam-queue = "0.3.11"

[dev-dependencies]
bevy.workspace = true

[lints]
workspace = true
